# cardputer-text-example

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-xtensa.nix  xtensa-gcc.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: z8yqbaq5c36p1hy7ia2rnrvhld78p3hp-source
