[package]
edition      = "2024"
name         = "cardputer-text-example"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "cardputer-text-example"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32s3", "log-04", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32s3",
  "log-04",
] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3", "log-04"] }
log                    = "0.4.27"

embassy-net = { version = "0.7.1", features = [
  "dhcpv4",
  "log",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
esp-alloc = "0.9.0"
esp-println = { version = "0.16.1", features = ["esp32s3", "log-04"] }
# for more networking protocol support see https://crates.io/crates/edge-net
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [
  "async",
  "macros",
] }
embassy-executor = { version = "0.9.1", features = ["log"] }
embassy-time = { version = "0.5.0", features = ["log"] }
esp-radio = { version = "0.17.0", features = [
  "ble",
  "coex",
  "esp-alloc",
  "esp32s3",
  "log-04",
  "smoltcp",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "log",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }

critical-section = "1.2.0"
static_cell      = "2.1.1"

edge-nal = "0.5.0"
edge-nal-embassy = "0.6.0"
edge-dhcp = "0.6.0"
esp-backtrace = {version = "0.18.1", features = ["panic-handler", "println", "esp32s3"]}

embedded-graphics = "0.8.1"
display-interface-spi = "0.5.0"
mipidsi = "0.8.0"
embedded-hal-bus = "0.2.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
